[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
config = "0.13.3"
async-trait = "0.1.68"
typed-builder = "0.18.0"
moka = { version = "0.12.1", features = ["sync"] }

# tracing
log = "0.4.20"
tracing = "0.1.37"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "json"] }

# actix
actix = "0.13.0"
actix-web = "4.3.1"

# orm
sea-orm = { version = "0.12.4", features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
] }

# lazy
once_cell = "1.15.0"
async-oncecell = "0.2.0"

[dependencies.mimalloc]
version = "0.1.39"

[dependencies.tokio]
version = "1.27.0"
features = ["full"]

[dependencies.serde]
version = "1.0.160"
features = ["derive", "std"]

[dependencies.serde_json]
version = "1.0.96"
